# codex-johnsmile

./: .env.example  .gitignore  README.md  app.py  commands.py  config.py  pyproject.toml  requirements.txt  scheduler.py
analysis/: backtester.py  performance_analyzer.py  stock_report.py
data/: mock_stocks.py
modules/: db.py  financials.py  judgment.py  news.py  report.py  scoring.py
openclaw/: commands.py
openclaw-skills/stock-analysis-core/: SKILL.md
openclaw-skills/stock-risk-guard/: SKILL.md
pages/: 01_📊_대시보드.py  02_🔍_종목_상세.py  03_📝_매매일지.py
services/: db_service.py  financial_data.py  kiwoom_data.py  kiwoom_order.py  market_data.py  mock_db_service.py  news_data.py  order_intent_service.py  price_service.py  supabase_client.py  system_settings.py  telegram_bot.py  telegram_notifier.py  virtual_order.py  virtual_portfolio.py  virtual_position.py  virtual_trading.py
services/data_providers/: dart_provider.py  fdr_provider.py  naver_provider.py
sql/: schema.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql
strategy/: indicators.py  paper_trading_engine.py  risk_manager.py  scanner.py  signal_generator.py  strategy_rules.py
